src/pages/Main.css
.main-main {
  display: flex;
  width: 80%;
  gap: 40px;
}

.side-card {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 10px;
  padding: 20px;
  background-color: #7f00ff1A;
  border: 2px solid var(--main-color);
  border-radius: 5%;
}

.side-link {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 10px;
}

.side-text-profile {
  background: none;
  border: none;
  color: black;
  font-family: 'NexonKartGothic';
  font-weight: 700;
  font-size: 50px;
  margin-top: -10px;
  margin-bottom: -20px;
}

.side-text-description {
  background: none;
  border: none;
  color: black;
  font-family: 'NexonKartGothic';
  font-weight: 400;
  font-size: 20px;
}

.side-image-profile {
  width: 300px;
  height: 300px;
  overflow: hidden;
  border: 2px solid black;
  border-radius: 100%;
}

.side-image-link {
  width: 40px;
  height: 40px;
  cursor: pointer;
}

.content-grid {
  display: grid;
  grid-template-columns: 1fr 1fr;
  gap: 32px;
  flex: 1;
}

.content-card {
  background: none;
  border-radius: 5%;
  padding: 10px 20px;
  gap: 10px;
}

.content-card h2 {
  font-family: 'NexonKartGothic';
  font-weight: 700;
  font-size: 30px;
  text-align: center;
  margin-bottom: 10px;
}

.content-block {
  padding: 10px;
  border-bottom: 1px solid var(--divider-color);
}

.content-block h4 {
  font-family: 'NexonKartGothic';
  font-weight: 700;
  font-size: 20px;
}

.content-block p {
  font-family: 'NexonKartGothic';
  font-weight: 400;
  font-size: 15px;
  color: var(--description-color);
}

.content-block .emoji {
  width: 32px;
  display: inline-flex;
  text-align: center;
  justify-content: center;
}

.skill-icon-grid {
  display: grid;
  justify-content: center;
  grid-template-columns: repeat(auto-fill, 40px);
  gap: 20px 10px;
  padding: 10px;
}

.projects,
.experiences {
  grid-column: 1 / -1;
}

